z-index fix for mobile menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,7 @@ header {
       display: none;
       height: auto;
       background: #fff;
-      z-index: 99;
+      z-index: 200;
     }
 
     a {
